--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,13 @@ a:hover h3{
 .new {
   color: black;
 }
+
+//sass
+#main {
+  width: 97%; }
+  #main p, #main div {
+    font-size: 2em; }
+    #main p a, #main div a {
+      font-weight: bold; }
+  #main pre {
+    font-size: 3em; }
